--- a/test-uwp-netcore3.csproj
+++ b/test-uwp-netcore3.csproj
@@ -5,10 +5,12 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>test_uwp_netcore3</RootNamespace>
     <UseWPF>true</UseWPF>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI" Version="5.1.1" />
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls" Version="5.1.1" />
     <PackageReference Include="Microsoft.Toolkit.Wpf.UI.Controls" Version="6.0.0-preview7.1" />
     <PackageReference Include="Microsoft.Toolkit.Wpf.UI.XamlHost" Version="6.0.0-preview7.1" />
   </ItemGroup>
